--- a/EmpManagementSystem/wwwroot/index.html
+++ b/EmpManagementSystem/wwwroot/index.html
@@ -28,6 +28,7 @@
             <!-- Search and Add Section -->
             <div class="top-bar">
                 <input type="text" placeholder="Search..." class="search-bar">
+                <button class="add-button">Search</button>
                 <button class="add-button">Add</button>
             </div>
 
