--- a/EmpManagementSystem/wwwroot/index.html
+++ b/EmpManagementSystem/wwwroot/index.html
@@ -89,9 +89,9 @@
     <div class="container">
         <aside>
             <ul class="sidebar">
-                <li><button id="searchButton" class="add-button">&nbsp;Employees&nbsp;</button></li>
-                <li><button class="add-button">&nbsp;&nbsp;&nbsp;&nbsp;Roles&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</button></li>
-                <li><button class="add-button">Departments</button></li>
+                <li>Employees</li>
+                <li>Roles</li>
+                <li>Departments</li>
             </ul>
         </aside>
 
